--- a/portfolio.html
+++ b/portfolio.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Хедер -->
@@ -34,6 +41,143 @@
         </li>
       </ul>
     </header>
+
+    <!-- Майн -->
+    <main>
+      <h1 class="visually-hidden">Портфоліо</h1>
+      <section>
+        <!-- Фільтри -->
+        <ul>
+          <li>
+            <button type="button">Усі</button>
+          </li>
+          <li>
+            <button type="button">Веб-сайти</button>
+          </li>
+          <li>
+            <button type="button">Додатки</button>
+          </li>
+          <li>
+            <button type="button">Дизайн</button>
+          </li>
+          <li>
+            <button type="button">Маркетинг</button>
+          </li>
+        </ul>
+
+        <!-- Проекти -->
+        <ul>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/project1.jpg"
+                alt="Картки трьох людей на экрані ноутбука"
+                width="370"
+                height="294"
+              />
+              <h2>Технокряк</h2>
+              <p>Веб-сайт</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/project2.jpg"
+                alt="Два чоловіки грають в баскетбол"
+                width="370"
+                height="294"
+              />
+              <h2>Постер <span lang="en">Orlean vs Golden Star</span></h2>
+              <p>Дизайн</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/project3.jpg"
+                alt="Емблема ресторану у формі риби"
+                width="370"
+                height="294"
+              />
+              <h2>Ресторан <span lang="en">Seafood</span></h2>
+              <p>Додаток</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/project4.jpg"
+                alt="Зображення навушників"
+                width="370"
+                height="294"
+              />
+              <h2>Проєкт <span lang="en">Prime</span></h2>
+              <p>Маркетинг</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/project5.jpg"
+                alt="Дві невеликі коробки"
+                width="370"
+                height="294"
+              />
+              <h2>Проєкт<span lang="en">Boxes</span></h2>
+              <p>Додаток</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/project6.jpg"
+                alt="Монітор з зображенням карти світу"
+                width="370"
+                height="294"
+              />
+              <h2 lang="en">Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/project7.jpg"
+                alt="Відкритий журнал"
+                width="370"
+                height="294"
+              />
+              <h2>Видання<span lang="en">Limited Edition</span></h2>
+              <p>Дизайн</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/project8.jpg"
+                alt="Етикетка товару"
+                width="370"
+                height="294"
+              />
+              <h2>Проєкт<span lang="en">LAB</span></h2>
+              <p>Маркетинг</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio/project9.jpg"
+                alt="Людина працює на ноутбуці"
+                width="370"
+                height="294"
+              />
+              <h2 lang="en">Growing Business</h2>
+              <p>Додаток</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
 
     <!-- Підвал -->
     <footer>
