--- a/index.html
+++ b/index.html
@@ -15,68 +15,77 @@
   </head>
   <body>
     <!-- Хедер -->
-    <header>
+    <header class="header">
       <!-- Навігація -->
-      <nav>
-        <a href="./index.html" lang="en"><span>Web</span>Studio</a>
-        <ul>
+      <nav class="header-nav">
+        <a class="logo" href="./index.html" lang="en"><span>Web</span>Studio</a>
+        <ul class="header-list">
           <li>
-            <a href="./index.html">Студія</a>
+            <a class="header-link" href="./index.html">Студія</a>
           </li>
           <li>
-            <a href="./portfolio.html">Портфоліо</a>
+            <a class="header-link" href="./portfolio.html">Портфоліо</a>
           </li>
           <li>
-            <a href="">Контакти</a>
+            <a class="header-link" href="">Контакти</a>
           </li>
         </ul>
       </nav>
       <!-- Контакти -->
-      <ul>
+      <ul class="header-contacts">
         <li>
-          <a lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="header-mail" lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
 
     <!-- Майн -->
-    <main>
+    <main class="main">
       <!-- Герой -->
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button class="hero-btn" type="button">Замовити послугу</button>
       </section>
       <!-- Особливості -->
-      <section>
+      <section class="features">
         <h2 class="visually-hidden">Особливості</h2>
-        <ul>
+        <ul class="features-list">
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="features-text">
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+            </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="features-text">
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+            </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <h3 class="features-title">ПЛАНУВАННЯ</h3>
+            <p class="features-text">
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="features-text">
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
           </li>
         </ul>
       </section>
       <!-- Чим ми займаємося -->
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
+      <section class="description">
+        <h2 class="description-title">Чим ми займаємося</h2>
+        <ul class="description-list">
           <li>
             <img
+              class="description-pic"
               src="./images/what-we-do/box1.jpg"
               alt="Людина працює за компьютером"
               width="370"
@@ -85,6 +94,7 @@
           </li>
           <li>
             <img
+              class="description-pic"
               src="./images/what-we-do/box2.jpg"
               alt="Людина зі смартфоном працює за компьютером"
               width="370"
@@ -93,6 +103,7 @@
           </li>
           <li>
             <img
+              class="description-pic"
               src="./images/what-we-do/box3.jpg"
               alt="Людина тримає в руці планшет"
               width="370"
@@ -102,63 +113,63 @@
         </ul>
       </section>
       <!-- Наша команда -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team-list">
           <li>
-            <img
+            <img class="team-img"
               src="./images/team/ihor.jpg"
               alt="Фото Ігора Дем'яненко"
               width="270"
               height="260"
             />
-            <h3>Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-subtitle">Ігор Дем'яненко</h3>
+            <p class="team-text" lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="./images/team/olha.jpg" alt="Фото Ольги Рєпіної" width="270" height="260" />
-            <h3>Ольга Рєпіна</h3>
-            <p lang="en">Frontend Developer</p>
+            <img class="team-img" src="./images/team/olha.jpg" alt="Фото Ольги Рєпіної" width="270" height="260" />
+            <h3 class="team-subtitle">Ольга Рєпіна</h3>
+            <p class="team-text" lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img
+            <img class="team-img"
               src="./images/team/mykola.jpg"
               alt="Фото Миколи Тарасова"
               width="270"
               height="260"
             />
-            <h3>Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-subtitle">Микола Тарасов</h3>
+            <p class="team-text" lang="en">Marketing</p>
           </li>
           <li>
-            <img
+            <img class="team-img"
               src="./images/team/myhailo.jpg"
               alt="Фото Михайла Єрмакова"
               width="270"
               height="260"
             />
-            <h3>Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-subtitle">Михайло Єрмаков</h3>
+            <p class="team-text" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <!-- Підвал -->
-    <footer>
-      <a href="./index.html" lang="en"><span>Web</span>Studio</a>
-      <address>
-        <ul>
+    <footer class="footer">
+      <a class="logo" href="./index.html" lang="en"><span>Web</span>Studio</a>
+      <address class="address">
+        <ul class="address-list">
           <li>
-            <a href="https://goo.gl/maps/JJp694LmXSiKLwUw6" target="_blank" rel="noopener noreferer"
+            <a class="map" href="https://goo.gl/maps/JJp694LmXSiKLwUw6" target="_blank" rel="noopener noreferer"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
           <li>
-            <a lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="footer-mail" lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
