--- a/portfolio.html
+++ b/portfolio.html
@@ -15,29 +15,29 @@
   </head>
   <body>
     <!-- Хедер -->
-    <header>
+    <header class="header">
       <!-- Навігація -->
-      <nav>
-        <a href="./index.html" lang="en"><span>Web</span>Studio</a>
-        <ul>
+      <nav class="header-nav">
+        <a class="logo" href="./index.html" lang="en"><span>Web</span>Studio</a>
+        <ul class="header-list">
           <li>
-            <a href="./index.html">Студія</a>
+            <a class="header-link" href="./index.html">Студія</a>
           </li>
           <li>
-            <a href="./portfolio.html">Портфоліо</a>
+            <a class="header-link" href="./portfolio.html">Портфоліо</a>
           </li>
           <li>
-            <a href="">Контакти</a>
+            <a class="header-link" href="">Контакти</a>
           </li>
         </ul>
       </nav>
       <!-- Контакти -->
-      <ul>
+      <ul class="header-contacts">
         <li>
-          <a lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="header-mail" lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -45,134 +45,134 @@
     <!-- Майн -->
     <main>
       <h1 class="visually-hidden">Портфоліо</h1>
-      <section>
+      <section class="filter">
         <!-- Фільтри -->
-        <ul>
+        <ul class="filter-list">
           <li>
-            <button type="button">Усі</button>
+            <button class="filter-btn" type="button">Усі</button>
           </li>
           <li>
-            <button type="button">Веб-сайти</button>
+            <button class="filter-btn" type="button">Веб-сайти</button>
           </li>
           <li>
-            <button type="button">Додатки</button>
+            <button class="filter-btn" type="button">Додатки</button>
           </li>
           <li>
-            <button type="button">Дизайн</button>
+            <button class="filter-btn" type="button">Дизайн</button>
           </li>
           <li>
-            <button type="button">Маркетинг</button>
+            <button class="filter-btn" type="button">Маркетинг</button>
           </li>
         </ul>
 
         <!-- Проекти -->
-        <ul>
+        <ul class="project">
           <li>
-            <a href="">
-              <img
+            <a class="project-link" href="">
+              <img class="project-img"
                 src="./images/portfolio/project1.jpg"
                 alt="Картки трьох людей на экрані ноутбука"
                 width="370"
                 height="294"
               />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
+              <h2 class="project-title">Технокряк</h2>
+              <p class="project-text">Веб-сайт</p>
             </a>
           </li>
           <li>
-            <a href="">
-              <img
+            <a class="project-link" href="">
+              <img class="project-img"
                 src="./images/portfolio/project2.jpg"
                 alt="Два чоловіки грають в баскетбол"
                 width="370"
                 height="294"
               />
-              <h2>Постер <span lang="en">Orlean vs Golden Star</span></h2>
-              <p>Дизайн</p>
+              <h2 class="project-title">Постер <span lang="en">Orlean vs Golden Star</span></h2>
+              <p class="project-text">Дизайн</p>
             </a>
           </li>
           <li>
-            <a href="">
-              <img
+            <a class="project-link" href="">
+              <img class="project-img"
                 src="./images/portfolio/project3.jpg"
                 alt="Емблема ресторану у формі риби"
                 width="370"
                 height="294"
               />
-              <h2>Ресторан <span lang="en">Seafood</span></h2>
-              <p>Додаток</p>
+              <h2 class="project-title">Ресторан <span lang="en">Seafood</span></h2>
+              <p class="project-text">Додаток</p>
             </a>
           </li>
           <li>
-            <a href="">
-              <img
+            <a class="project-link" href="">
+              <img class="project-img"
                 src="./images/portfolio/project4.jpg"
                 alt="Зображення навушників"
                 width="370"
                 height="294"
               />
-              <h2>Проєкт <span lang="en">Prime</span></h2>
-              <p>Маркетинг</p>
+              <h2 class="project-title">Проєкт <span lang="en">Prime</span></h2>
+              <p class="project-text">Маркетинг</p>
             </a>
           </li>
           <li>
-            <a href="">
-              <img
+            <a class="project-link" href="">
+              <img class="project-img"
                 src="./images/portfolio/project5.jpg"
                 alt="Дві невеликі коробки"
                 width="370"
                 height="294"
               />
-              <h2>Проєкт<span lang="en">Boxes</span></h2>
-              <p>Додаток</p>
+              <h2 class="project-title">Проєкт<span lang="en">Boxes</span></h2>
+              <p class="project-text">Додаток</p>
             </a>
           </li>
           <li>
-            <a href="">
-              <img
+            <a class="project-link" href="">
+              <img class="project-img"
                 src="./images/portfolio/project6.jpg"
                 alt="Монітор з зображенням карти світу"
                 width="370"
                 height="294"
               />
-              <h2 lang="en">Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <h2 class="project-title" lang="en">Inspiration has no Borders</h2>
+              <p class="project-text">Веб-сайт</p>
             </a>
           </li>
           <li>
-            <a href="">
-              <img
+            <a class="project-link" href="">
+              <img class="project-img"
                 src="./images/portfolio/project7.jpg"
                 alt="Відкритий журнал"
                 width="370"
                 height="294"
               />
-              <h2>Видання<span lang="en">Limited Edition</span></h2>
-              <p>Дизайн</p>
+              <h2 class="project-title">Видання<span lang="en">Limited Edition</span></h2>
+              <p class="project-text">Дизайн</p>
             </a>
           </li>
           <li>
-            <a href="">
-              <img
+            <a class="project-link" href="">
+              <img class="project-img"
                 src="./images/portfolio/project8.jpg"
                 alt="Етикетка товару"
                 width="370"
                 height="294"
               />
-              <h2>Проєкт<span lang="en">LAB</span></h2>
-              <p>Маркетинг</p>
+              <h2 class="project-title">Проєкт<span lang="en">LAB</span></h2>
+              <p class="project-text">Маркетинг</p>
             </a>
           </li>
           <li>
-            <a href="">
-              <img
+            <a class="project-link" href="">
+              <img class="project-img"
                 src="./images/portfolio/project9.jpg"
                 alt="Людина працює на ноутбуці"
                 width="370"
                 height="294"
               />
-              <h2 lang="en">Growing Business</h2>
-              <p>Додаток</p>
+              <h2 class="project-title" lang="en">Growing Business</h2>
+              <p class="project-text">Додаток</p>
             </a>
           </li>
         </ul>
@@ -180,20 +180,20 @@
     </main>
 
     <!-- Підвал -->
-    <footer>
-      <a href="./index.html" lang="en"><span>Web</span>Studio</a>
-      <address>
-        <ul>
+    <footer class="footer">
+      <a class="logo" href="./index.html" lang="en"><span>Web</span>Studio</a>
+      <address class="address">
+        <ul class="address-list">
           <li>
-            <a href="https://goo.gl/maps/JJp694LmXSiKLwUw6" target="_blank" rel="noopener noreferer"
+            <a class="map" href="https://goo.gl/maps/JJp694LmXSiKLwUw6" target="_blank" rel="noopener noreferer"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
           <li>
-            <a lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="footer-mail" lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
