Добавляет CSS в index.html

--- a/index.html
+++ b/index.html
@@ -18,26 +18,29 @@
     <header class="header">
       <!-- Навігація -->
       <nav class="header-nav">
-        <a class="logo" href="./index.html" lang="en"><span>Web</span>Studio</a>
-        <ul class="header-list">
-          <li>
-            <a class="header-link" href="./index.html">Студія</a>
+        <a class="logo link" href="./index.html" lang="en">
+          <span class="logo-accent">Web</span>Studio</a>
+        <ul class="header-list list">
+          <li class="header-item">
+            <a class="header-link link" href="./index.html">Студія</a>
           </li>
-          <li>
-            <a class="header-link" href="./portfolio.html">Портфоліо</a>
+          <li class="header-item">
+            <a class="header-link link" href="./portfolio.html">Портфоліо</a>
           </li>
-          <li>
-            <a class="header-link" href="">Контакти</a>
+          <li class="header-item">
+            <a class="header-link link" href="">Контакти</a>
           </li>
         </ul>
       </nav>
       <!-- Контакти -->
-      <ul class="header-contacts">
-        <li>
-          <a class="header-mail" lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <ul class="header-contacts list">
+        <li class="contacts-item">
+          <a class="header-mail link" lang="en" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
         </li>
-        <li>
-          <a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+        <li class="contacts-item">
+          <a class="header-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -52,26 +55,26 @@
       <!-- Особливості -->
       <section class="features">
         <h2 class="visually-hidden">Особливості</h2>
-        <ul class="features-list">
-          <li>
+        <ul class="features-list list">
+          <li class="features-item">
             <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="features-text">
               Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
             </p>
           </li>
-          <li>
+          <li class="features-item">
             <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="features-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
             </p>
           </li>
-          <li>
+          <li class="features-item">
             <h3 class="features-title">ПЛАНУВАННЯ</h3>
             <p class="features-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li>
+          <li class="features-item">
             <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="features-text">
               Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -82,8 +85,8 @@
       <!-- Чим ми займаємося -->
       <section class="description">
         <h2 class="description-title">Чим ми займаємося</h2>
-        <ul class="description-list">
-          <li>
+        <ul class="description-list list">
+          <li class="description-item">
             <img
               class="description-pic"
               src="./images/what-we-do/box1.jpg"
@@ -92,7 +95,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="description-item">
             <img
               class="description-pic"
               src="./images/what-we-do/box2.jpg"
@@ -101,7 +104,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="description-item">
             <img
               class="description-pic"
               src="./images/what-we-do/box3.jpg"
@@ -115,9 +118,10 @@
       <!-- Наша команда -->
       <section class="team">
         <h2 class="team-title">Наша команда</h2>
-        <ul class="team-list">
-          <li>
-            <img class="team-img"
+        <ul class="team-list list">
+          <li class="team-item">
+            <img
+              class="team-img"
               src="./images/team/ihor.jpg"
               alt="Фото Ігора Дем'яненко"
               width="270"
@@ -126,13 +130,20 @@
             <h3 class="team-subtitle">Ігор Дем'яненко</h3>
             <p class="team-text" lang="en">Product Designer</p>
           </li>
-          <li>
-            <img class="team-img" src="./images/team/olha.jpg" alt="Фото Ольги Рєпіної" width="270" height="260" />
+          <li class="team-item">
+            <img
+              class="team-img"
+              src="./images/team/olha.jpg"
+              alt="Фото Ольги Рєпіної"
+              width="270"
+              height="260"
+            />
             <h3 class="team-subtitle">Ольга Рєпіна</h3>
             <p class="team-text" lang="en">Frontend Developer</p>
           </li>
-          <li>
-            <img class="team-img"
+          <li class="team-item">
+            <img
+              class="team-img"
               src="./images/team/mykola.jpg"
               alt="Фото Миколи Тарасова"
               width="270"
@@ -141,8 +152,9 @@
             <h3 class="team-subtitle">Микола Тарасов</h3>
             <p class="team-text" lang="en">Marketing</p>
           </li>
-          <li>
-            <img class="team-img"
+          <li class="team-item">
+            <img
+              class="team-img"
               src="./images/team/myhailo.jpg"
               alt="Фото Михайла Єрмакова"
               width="270"
@@ -157,19 +169,27 @@
 
     <!-- Підвал -->
     <footer class="footer">
-      <a class="logo" href="./index.html" lang="en"><span>Web</span>Studio</a>
+      <a class="logo-footer link" href="./index.html" lang="en"
+        ><span class="logo-accent">Web</span>Studio</a
+      >
       <address class="address">
-        <ul class="address-list">
+        <ul class="address-list list">
           <li>
-            <a class="map" href="https://goo.gl/maps/JJp694LmXSiKLwUw6" target="_blank" rel="noopener noreferer"
+            <a
+              class="map link"
+              href="https://goo.gl/maps/JJp694LmXSiKLwUw6"
+              target="_blank"
+              rel="noopener noreferer"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
           <li>
-            <a class="footer-mail" lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="footer-mail link" lang="en" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="footer-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
