--- a/portfolio.html
+++ b/portfolio.html
@@ -18,26 +18,29 @@
     <header class="header">
       <!-- Навігація -->
       <nav class="header-nav">
-        <a class="logo" href="./index.html" lang="en"><span>Web</span>Studio</a>
-        <ul class="header-list">
-          <li>
-            <a class="header-link" href="./index.html">Студія</a>
+        <a class="logo link" href="./index.html" lang="en">
+          <span class="logo-accent">Web</span>Studio</a>
+        <ul class="header-list list">
+          <li class="header-item">
+            <a class="header-link link" href="./index.html">Студія</a>
           </li>
-          <li>
-            <a class="header-link" href="./portfolio.html">Портфоліо</a>
+          <li class="header-item">
+            <a class="header-link link" href="./portfolio.html">Портфоліо</a>
           </li>
-          <li>
-            <a class="header-link" href="">Контакти</a>
+          <li class="header-item">
+            <a class="header-link link" href="">Контакти</a>
           </li>
         </ul>
       </nav>
       <!-- Контакти -->
-      <ul class="header-contacts">
-        <li>
-          <a class="header-mail" lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <ul class="header-contacts list">
+        <li class="contacts-item">
+          <a class="header-mail link" lang="en" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
         </li>
-        <li>
-          <a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+        <li class="contacts-item">
+          <a class="header-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -47,29 +50,30 @@
       <h1 class="visually-hidden">Портфоліо</h1>
       <section class="filter">
         <!-- Фільтри -->
-        <ul class="filter-list">
-          <li>
+        <ul class="filter-list list">
+          <li class="filter-item">
             <button class="filter-btn" type="button">Усі</button>
           </li>
-          <li>
+          <li class="filter-item">
             <button class="filter-btn" type="button">Веб-сайти</button>
           </li>
-          <li>
+          <li class="filter-item">
             <button class="filter-btn" type="button">Додатки</button>
           </li>
-          <li>
+          <li class="filter-item">
             <button class="filter-btn" type="button">Дизайн</button>
           </li>
-          <li>
+          <li class="filter-item">
             <button class="filter-btn" type="button">Маркетинг</button>
           </li>
         </ul>
 
         <!-- Проекти -->
-        <ul class="project">
-          <li>
-            <a class="project-link" href="">
-              <img class="project-img"
+        <ul class="project list">
+          <li class="project-item">
+            <a class="project-link link" href="">
+              <img
+                class="project-img"
                 src="./images/portfolio/project1.jpg"
                 alt="Картки трьох людей на экрані ноутбука"
                 width="370"
@@ -79,9 +83,10 @@
               <p class="project-text">Веб-сайт</p>
             </a>
           </li>
-          <li>
-            <a class="project-link" href="">
-              <img class="project-img"
+          <li class="project-item">
+            <a class="project-link link" href="">
+              <img
+                class="project-img"
                 src="./images/portfolio/project2.jpg"
                 alt="Два чоловіки грають в баскетбол"
                 width="370"
@@ -91,9 +96,10 @@
               <p class="project-text">Дизайн</p>
             </a>
           </li>
-          <li>
-            <a class="project-link" href="">
-              <img class="project-img"
+          <li class="project-item">
+            <a class="project-link link" href="">
+              <img
+                class="project-img"
                 src="./images/portfolio/project3.jpg"
                 alt="Емблема ресторану у формі риби"
                 width="370"
@@ -103,9 +109,10 @@
               <p class="project-text">Додаток</p>
             </a>
           </li>
-          <li>
-            <a class="project-link" href="">
-              <img class="project-img"
+          <li class="project-item">
+            <a class="project-link link" href="">
+              <img
+                class="project-img"
                 src="./images/portfolio/project4.jpg"
                 alt="Зображення навушників"
                 width="370"
@@ -115,9 +122,10 @@
               <p class="project-text">Маркетинг</p>
             </a>
           </li>
-          <li>
-            <a class="project-link" href="">
-              <img class="project-img"
+          <li class="project-item">
+            <a class="project-link link" href="">
+              <img
+                class="project-img"
                 src="./images/portfolio/project5.jpg"
                 alt="Дві невеликі коробки"
                 width="370"
@@ -127,9 +135,10 @@
               <p class="project-text">Додаток</p>
             </a>
           </li>
-          <li>
-            <a class="project-link" href="">
-              <img class="project-img"
+          <li class="project-item">
+            <a class="project-link link" href="">
+              <img
+                class="project-img"
                 src="./images/portfolio/project6.jpg"
                 alt="Монітор з зображенням карти світу"
                 width="370"
@@ -139,9 +148,10 @@
               <p class="project-text">Веб-сайт</p>
             </a>
           </li>
-          <li>
-            <a class="project-link" href="">
-              <img class="project-img"
+          <li class="project-item">
+            <a class="project-link link" href="">
+              <img
+                class="project-img"
                 src="./images/portfolio/project7.jpg"
                 alt="Відкритий журнал"
                 width="370"
@@ -151,9 +161,10 @@
               <p class="project-text">Дизайн</p>
             </a>
           </li>
-          <li>
-            <a class="project-link" href="">
-              <img class="project-img"
+          <li class="project-item">
+            <a class="project-link link" href="">
+              <img
+                class="project-img"
                 src="./images/portfolio/project8.jpg"
                 alt="Етикетка товару"
                 width="370"
@@ -163,9 +174,10 @@
               <p class="project-text">Маркетинг</p>
             </a>
           </li>
-          <li>
-            <a class="project-link" href="">
-              <img class="project-img"
+          <li class="project-item">
+            <a class="project-link link" href="">
+              <img
+                class="project-img"
                 src="./images/portfolio/project9.jpg"
                 alt="Людина працює на ноутбуці"
                 width="370"
@@ -181,19 +193,27 @@
 
     <!-- Підвал -->
     <footer class="footer">
-      <a class="logo" href="./index.html" lang="en"><span>Web</span>Studio</a>
+      <a class="logo-footer link" href="./index.html" lang="en"
+        ><span class="logo-accent">Web</span>Studio</a
+      >
       <address class="address">
-        <ul class="address-list">
+        <ul class="address-list list">
           <li>
-            <a class="map" href="https://goo.gl/maps/JJp694LmXSiKLwUw6" target="_blank" rel="noopener noreferer"
+            <a
+              class="map link"
+              href="https://goo.gl/maps/JJp694LmXSiKLwUw6"
+              target="_blank"
+              rel="noopener noreferer"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
           <li>
-            <a class="footer-mail" lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="footer-mail link" lang="en" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="footer-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
