Добавляет CSS в  portfolio.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <span class="logo-accent">Web</span>Studio</a>
         <ul class="header-list list">
           <li class="header-item">
-            <a class="header-link link" href="./index.html">Студія</a>
+            <a class="header-link link current" href="./index.html">Студія</a>
           </li>
           <li class="header-item">
             <a class="header-link link" href="./portfolio.html">Портфоліо</a>
