--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
-    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <!-- Хедер -->
@@ -19,7 +19,8 @@
       <!-- Навігація -->
       <nav class="header-nav">
         <a class="logo link" href="./index.html" lang="en">
-          <span class="logo-accent">Web</span>Studio</a>
+          <span class="logo-accent">Web</span>Studio</a
+        >
         <ul class="header-list list">
           <li class="header-item">
             <a class="header-link link" href="./index.html">Студія</a>
@@ -47,8 +48,8 @@
 
     <!-- Майн -->
     <main>
-      <h1 class="visually-hidden">Портфоліо</h1>
-      <section class="filter">
+      <section class="portfolio">
+        <h1 class="visually-hidden">Портфоліо</h1>
         <!-- Фільтри -->
         <ul class="filter-list list">
           <li class="filter-item">
